--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=Fingerprint Scanner TTL
 version=1.1.0
-author=Josh Hawley
-maintainer=SparkFun Electronics
+author=Josh Hawley, modified by David López Chica
+maintainer=David López Chica
 sentence=Arduino examples for ADH-Tech's Fingerprint Scanners.
 paragraph=This is a great fingerprint module from ADH-Tech that communicates over 3.3V TTL Serial so you can easily embed it into your next project. This repository contains Arduino example code to work with it. This code has been tested with GT-521F32, GT-521F52, GT-511C3, and GT-511C1R.
 category=Sensors
-url=https://github.com/sparkfun/Fingerprint_Scanner-TTL
+url=https://github.com/Fasgort/Fingerprint_Scanner-TTL
 architectures=*
